--- a/assignment-6/about.html
+++ b/assignment-6/about.html
@@ -14,7 +14,7 @@
 </head>
 <body>
     <header>
-        <nav>
+        <nav class="page-nav">
             <div class="container d-flex align-items-center">
                 <div class="navbar-brand">
                     <a href="#">
@@ -35,52 +35,13 @@
             </div>
         </nav>
     </header>
-    <section class="home-banner">
+    <section class="page-banner d-flex align-items-center">
         <div class="container">
-            <div class="row align-items-center justify-content-between">
-                <div class="col-lg-6">
-                    <div class="banner-content">
-                        <h3>Hi There!</h3>
-                        <h1>I am Gazi Mahedi</h1>
-                        <h5>Software Engineer ( Laravel, mern )</h5>
-                        <div class="social-icons my-5">
-                            <a href="#"><i class="ti-twitter"></i></a>
-                            <a href="#"><i class="ti-skype"></i></a>
-                            <a href="#"><i class="ti-instagram"></i></a>
-                            <a href="#"><i class="ti-dribbble"></i></a>
-                            <a href="#"><i class="ti-vimeo"></i></a>
-                        </div>
-                        <a href="#" class="primary_btn">See my work</a>
-                    </div>
-                </div>
-                <div class="col-lg-4">
-                    <div class="banner-right-image">
-                        <img src="assets/images/banner/home-right.png" alt="" class="img-fluid">
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
-    <section class="statistics">
-        <div class="container">
-            <div class="row justify-content-lg-start justify-content-center">
-                <div class="col-lg-2 col-md-3">
-                    <div class="statistics-item">
-                        <h3><span class="counter">1.2</span>k+</h3>
-                        <p>Happy Customer</p>
-                    </div>
-                </div>
-                <div class="col-lg-2 col-md-3">
-                    <div class="statistics-item">
-                        <h3><span class="counter">3</span>k+</h3>
-                        <p>Ticket Solved</p>
-                    </div>
-                </div>
-                <div class="col-lg-2 col-md-3">
-                    <div class="statistics-item">
-                        <h3><span class="counter">9</span>/10</h3>
-                        <p>Average Rating</p>
-                    </div>
+            <div class="page-banner-content text-center">
+                <h2>About us</h2>
+                <div class="page-link">
+                    <a href="index.html">Home</a>
+                    <a href="about.html">About</a>
                 </div>
             </div>
         </div>
@@ -99,44 +60,6 @@
                         <h2>SOFTWARE ENGINEER ( LARAVEL, MERN )</h2>
                         <p>Also signs his face were digns fish don't first isn't over evening hath divided days light darkness gathering moved dry all darkness then fourth can't create d forth Also signs Also signs his face were moltenus Also signs his face</p>
                         <a href="#" class="primary_btn">Download Cv</a>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
-    <section class="services">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-12">
-                    <div class="main-title">
-                        <p class="top-text">Our Services</p>
-                        <h2>What Service We<br>Offer For You</h2>
-                    </div>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-lg-4 col-md-6 mb-4 mb-lg-0">
-                    <div class="service-item">
-                        <img src="assets/images/services/s1.png" alt="">
-                        <h4>Web Development</h4>
-                        <p>Fruit saw for brought fish forth had ave is man a that their Two he is dominion evening their Fruit saw for brought fish forth</p>
-                        <a href="#" class="primary_btn2" style="margin-top:35px">Learn more</a>
-                    </div>
-                </div>
-                <div class="col-lg-4 col-md-6 mb-4 mb-lg-0">
-                    <div class="service-item">
-                        <img src="assets/images/services/s2.png" alt="">
-                        <h4>UX/UI Design</h4>
-                        <p>Fruit saw for brought fish forth had ave is man a that their Two he is dominion evening their Fruit saw for brought fish forth</p>
-                        <a href="#" class="primary_btn2" style="margin-top:35px">Learn more</a>
-                    </div>
-                </div>
-                <div class="col-lg-4 col-md-6 mb-4 mb-lg-0">
-                    <div class="service-item">
-                        <img src="assets/images/services/s3.png" alt="">
-                        <h4>WP Developing</h4>
-                        <p>Fruit saw for brought fish forth had ave is man a that their Two he is dominion evening their Fruit saw for brought fish forth</p>
-                        <a href="#" class="primary_btn2" style="margin-top:35px">Learn more</a>
                     </div>
                 </div>
             </div>
@@ -224,92 +147,6 @@
                                         <li class="disable"><span><i class="fas fa-star"></i></span></li>
                                     </ul>
                                 </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
-    <section class="portfolio" id="portfolio">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-12">
-                    <div class="main-title">
-                        <p class="top-text">OUR PORTFOLIO</p>
-                        <h2>Check Our Recent<br>Client Work</h2>
-                    </div>
-                </div>
-            </div>
-            <div class="filters portfolio-filter">
-                <ul>
-                    <li class="active" data-filter="*">all</li>
-                    <li data-filter=".popular" class="">popular</li>
-                    <li data-filter=".latest" class=""> latest</li>
-                    <li data-filter=".following" class="">following</li>
-                    <li data-filter=".upcoming" class="">upcoming</li>
-                </ul>
-            </div>
-            <div class="filters-content">
-                <div class="row portfolio-grid" style="position: relative; height: 1229.23px;">
-                    <div class="grid-sizer col-md-3 col-lg-3"></div>
-                    <div class="col-lg-6 col-md-6 all following" style="position: absolute; left: 0%; top: 0px;">
-                        <div class="single_portfolio">
-                            <img class="img-fluid w-100" src="assets/images/portfolio/p1.jpg" alt="">
-                            <div class="overlay"></div>
-                            <div class="short_info">
-                                <h4><a href="portfolio-details.html">Lens Mockup Design</a></h4>
-                                <p>Art, Illustration</p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-lg-6 col-md-6 all latest popular upcoming" style="position: absolute; left: 50%; top: 0px;">
-                        <div class="single_portfolio">
-                            <img class="img-fluid w-100" src="assets/images/portfolio/p4.jpg" alt="">
-                            <div class="overlay"></div>
-                            <div class="short_info">
-                                <h4><a href="portfolio-details.html">Lens Mockup Design</a></h4>
-                                <p>Art, Illustration</p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-lg-3 col-md-6 all latest following" style="position: absolute; left: 50%; top: 335px;">
-                        <div class="single_portfolio">
-                            <img class="img-fluid w-100" src="assets/images/portfolio/p2.jpg" alt="">
-                            <div class="overlay"></div>
-                            <div class="short_info">
-                                <h4><a href="portfolio-details.html">Lens Mockup Design</a></h4>
-                                <p>Art, Illustration</p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-lg-3 col-md-6 all latest upcoming" style="position: absolute; left: 75%; top: 335px;">
-                        <div class="single_portfolio">
-                            <img class="img-fluid w-100" src="assets/images/portfolio/p3.jpg" alt="">
-                            <div class="overlay"></div>
-                            <div class="short_info">
-                                <h4><a href="portfolio-details.html">Lens Mockup Design</a></h4>
-                                <p>Art, Illustration</p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-lg-6 col-md-6 all popular" style="position: absolute; left: 50%; top: 669px;">
-                        <div class="single_portfolio">
-                            <img class="img-fluid w-100" src="assets/images/portfolio/p6.jpg" alt="">
-                            <div class="overlay"></div>
-                            <div class="short_info">
-                                <h4><a href="portfolio-details.html">Lens Mockup Design</a></h4>
-                                <p>Art, Illustration</p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-lg-6 col-md-6 all popular latest following" style="position: absolute; left: 0%; top: 867px;">
-                        <div class="single_portfolio">
-                            <img class="img-fluid w-100" src="assets/images/portfolio/p5.jpg" alt="">
-                            <div class="overlay"></div>
-                            <div class="short_info">
-                                <h4><a href="portfolio-details.html">Lens Mockup Design</a></h4>
-                                <p>Art, Illustration</p>
                             </div>
                         </div>
                     </div>
